--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "dev:server": "cd server && npm run dev"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cypress": "^13.6.5",
+    "cypress-localstorage-commands": "^2.2.5"
+  }
 }
